@@ -1,25 +1,39 @@
 <?php
 // DO NOT CHANGE THIS FILE! It is automatically generated by extdeveval::buildAutoloadRegistry.
-// This file was generated on 2011-08-22 17:25
+// This file was generated on 2011-08-23 18:07
 
 $extensionPath = t3lib_extMgm::extPath('ics_libnavitia');
 $extensionClassesPath = t3lib_extMgm::extPath('ics_libnavitia') . 'Classes/';
 return array(
+	'tx_icslibnavitia_address' => $extensionClassesPath . 'DataObjects/class.tx_icslibnavitia_Address.php',
 	'tx_icslibnavitia_backward' => $extensionClassesPath . 'DataObjects/class.tx_icslibnavitia_Backward.php',
+	'tx_icslibnavitia_call' => $extensionClassesPath . 'DataObjects/class.tx_icslibnavitia_Call.php',
+	'tx_icslibnavitia_callvalue' => $extensionClassesPath . 'DataObjects/class.tx_icslibnavitia_CallValue.php',
+	'tx_icslibnavitia_city' => $extensionClassesPath . 'DataObjects/class.tx_icslibnavitia_City.php',
 	'tx_icslibnavitia_coord' => $extensionClassesPath . 'DataObjects/class.tx_icslibnavitia_Coord.php',
+	'tx_icslibnavitia_entrypoint' => $extensionClassesPath . 'DataObjects/class.tx_icslibnavitia_EntryPoint.php',
+	'tx_icslibnavitia_entrypointplanjourney' => $extensionClassesPath . 'DataObjects/class.tx_icslibnavitia_EntryPointPlanJourney.php',
 	'tx_icslibnavitia_forward' => $extensionClassesPath . 'DataObjects/class.tx_icslibnavitia_Forward.php',
+	'tx_icslibnavitia_hang' => $extensionClassesPath . 'DataObjects/class.tx_icslibnavitia_Hang.php',
+	'tx_icslibnavitia_journeyresult' => $extensionClassesPath . 'DataObjects/class.tx_icslibnavitia_JourneyResult.php',
 	'tx_icslibnavitia_line' => $extensionClassesPath . 'DataObjects/class.tx_icslibnavitia_Line.php',
 	'tx_icslibnavitia_mode' => $extensionClassesPath . 'DataObjects/class.tx_icslibnavitia_Mode.php',
 	'tx_icslibnavitia_modetype' => $extensionClassesPath . 'DataObjects/class.tx_icslibnavitia_ModeType.php',
 	'tx_icslibnavitia_network' => $extensionClassesPath . 'DataObjects/class.tx_icslibnavitia_Network.php',
 	'tx_icslibnavitia_node' => $extensionClassesPath . 'DataObjects/class.tx_icslibnavitia_Node.php',
 	'tx_icslibnavitia_nodelist' => $extensionClassesPath . 'DataObjects/class.tx_icslibnavitia_NodeList.php',
+	'tx_icslibnavitia_nota' => $extensionClassesPath . 'DataObjects/class.tx_icslibnavitia_Nota.php',
 	'tx_icslibnavitia_readonlynodelist' => $extensionClassesPath . 'DataObjects/class.tx_icslibnavitia_ReadOnlyNodeList.php',
 	'tx_icslibnavitia_routepoint' => $extensionClassesPath . 'DataObjects/class.tx_icslibnavitia_RoutePoint.php',
+	'tx_icslibnavitia_section' => $extensionClassesPath . 'DataObjects/class.tx_icslibnavitia_Section.php',
+	'tx_icslibnavitia_segment' => $extensionClassesPath . 'DataObjects/class.tx_icslibnavitia_Segment.php',
+	'tx_icslibnavitia_site' => $extensionClassesPath . 'DataObjects/class.tx_icslibnavitia_Site.php',
 	'tx_icslibnavitia_stop' => $extensionClassesPath . 'DataObjects/class.tx_icslibnavitia_Stop.php',
 	'tx_icslibnavitia_stoparea' => $extensionClassesPath . 'DataObjects/class.tx_icslibnavitia_StopArea.php',
 	'tx_icslibnavitia_stoppoint' => $extensionClassesPath . 'DataObjects/class.tx_icslibnavitia_StopPoint.php',
-	'tx_icslibnavitia_' => $extensionClassesPath . 'DataObjects/class.tx_icslibnavitia_Time.php',
+	'tx_icslibnavitia_summary' => $extensionClassesPath . 'DataObjects/class.tx_icslibnavitia_Summary.php',
+	'tx_icslibnavitia_time' => $extensionClassesPath . 'DataObjects/class.tx_icslibnavitia_Time.php',
+	'tx_icslibnavitia_undefined' => $extensionClassesPath . 'DataObjects/class.tx_icslibnavitia_Undefined.php',
 	'tx_icslibnavitia_inodelist' => $extensionClassesPath . 'DataObjects/interface.tx_icslibnavitia_INodeList.php',
 	'tx_icslibnavitia_dummyscheduleservice' => $extensionClassesPath . 'Services/class.tx_icslibnavitia_DummyScheduleService.php',
 );
